links for personnel and EMR

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -594,7 +594,7 @@ Dr. Anderson's areas of expertise and interest include Bayesian classification o
                         </div>
                         <div class="col-md-8">
                             <h2>David M. Thompson, PhD</h2><h4>Biostatistician</h4>
-                                                        <p><strong>David M. Thompson</strong> is an Associate Professor in the Department of Biostatistics and Epidemiology, University of Oklahoma Health Sciences Center.  He also serves as Associate Director of the department’s Research Design and Analysis Center (BSE RDAC) and director of the Training Unit within the Oklahoma Shared Clinical and Translational Resource (<a href="http://osctr.ouhsc.edu/">OSCTR</a>).  He teaches courses in applied linear statistical models, nonparametric statistics, and longitudinal data analysis.  His research interests include longitudinal data analysis and approaches to hierarchical and correlated data. He is part of a team at the OUHSC that develops workshops in evidence-based health care.  He provides research design and statistical support to a variety of projects in public health and clinical medicine, many of which employ statistical models to evaluate associations between outcomes and a variety of fixed, random, and repeated effects.  </p><p>
+                                                        <p><strong>David M. Thompson</strong> is an Associate Professor in the Department of Biostatistics and Epidemiology, University of Oklahoma Health Sciences Center.  He also serves as Associate Director of the department’s Research Design and Analysis Center (<a href="http://ouhsc.edu/bserdac/">BSE RDAC</a>) and director of the Training Unit within the Oklahoma Shared Clinical and Translational Resource (<a href="http://osctr.ouhsc.edu/">OSCTR</a>).  He teaches courses in applied linear statistical models, nonparametric statistics, and longitudinal data analysis.  His research interests include longitudinal data analysis and approaches to hierarchical and correlated data. He is part of a team at the OUHSC that develops workshops in evidence-based health care.  He provides research design and statistical support to a variety of projects in public health and clinical medicine, many of which employ statistical models to evaluate associations between outcomes and a variety of fixed, random, and repeated effects.  </p><p>
 
 Examples of Dr. Thompson's collaborations at OUHSC include statistical methods for cluster-randomized trials (Thompson, Fernald, & Mold, 2012); cluster-adjusted measures of sensitivity and specificity in a patient questionnaire of medicine and supplement use (Hanigan, Dela Cruz et al. 2011);  generalized linear mixed models to analyze correlated ordinal ratings made by air quality inspectors (Johnson, Thompson, Clinkenbeard & Redus, 2008); GEE and mixed models to explore longitudinal outcomes in a surgical cohort  (Elkins, Thompson, Lane, Elkins & Payton 2008); and cluster-adjusted Bland-Altman techniques applied to correlated EEG measures in patients undergoing anesthesia (Ozcan, Thompson, Cure, Hine & Roberts, 2009).  </p>
 
@@ -617,7 +617,7 @@ Examples of Dr. Thompson's collaborations at OUHSC include statistical methods f
                         </div>
                         <div class="col-md-8">
                             <h2>Christopher Aston, PhD</h2><h4>Biostatistician</h4>
-                                                        <p><strong>Christopher Aston </strong>is an Associate Research Professor of Pediatrics and Adjunct Associate Professor of Biostatistics and Epidemiology. He is also Director of the Biostatistics Core at Harold Hamm Diabetes Center and is a Faculty Biostatistician at <a href="http://osctr.ouhsc.edu/">OSCTR</a>.
+                                                        <p><strong>Christopher Aston </strong>is an Associate Research Professor of Pediatrics and Adjunct Associate Professor of Biostatistics and Epidemiology. He is also Director of the Biostatistics Core at <a href="http://haroldhamm.org/">Harold Hamm Diabetes Center</a> and is a Faculty Biostatistician at <a href="http://osctr.ouhsc.edu/">OSCTR</a>.
 </p><p>
 Dr. Aston's areas of expertise and interest include experimental design, data analysis, genetic epidemiology, and clinical trials.  </p>
                         </div>
@@ -644,7 +644,7 @@ Dr. Aston's areas of expertise and interest include experimental design, data an
                       </div>
                         <div class="col-md-8">
                             <h2>Thomas Wilson, M.P.H.</h2><h4>Database Manager</h4>
-                                                        <p><strong>Thomas Wilson</strong> is a BBMC database manager and a project coordinator at Section of Developmental and Behavioral Pediatrics. He is a REDCap administrator, developer, and trainer. He serves as the Co-Chair of the REDCap Consortium National Training Committee. Thomas coordinates and conducts data analysis for multiple research projects in the Section of Developmental and Behavioral Pediatrics and is currently working on manuscripts for dissemination on data from the MIECHV Competitive Grant. (And he moonlights as a karate instructor!) </p>
+                                                        <p><strong>Thomas Wilson</strong> is a BBMC database manager and a project coordinator at Section of Developmental and Behavioral Pediatrics. He is a REDCap administrator, developer, and trainer. He serves as the Co-Chair of the REDCap Consortium National Training Committee. Thomas coordinates and conducts data analysis for multiple research projects in the Section of Developmental and Behavioral Pediatrics and is currently working on manuscripts for dissemination on data from the MIECHV Competitive Grant. (And he moonlights as a <a href="http://www.infinityok.net/">karate instructor</a>!) </p>
 
                     </div>
                 </div></div>
@@ -718,7 +718,7 @@ Dr. Aston's areas of expertise and interest include experimental design, data an
                         </div>
                         <div class="col-md-8">
                             <h2>Maleeha Shahid, MB, BS, MPH </h2><h4>Affiliate Research Biostatistician</h4>
-                                                        <p><strong>Maleeha Shahid</strong> is a Research Biostatistician at OUHSC. She received her MPH from OUHSC College of Public Health and her MB, BS (Bachelor of Medicine and Bachelor of Surgery) from Sindh Medical College – University of Karachi in Karachi, Pakistan. Ms. Shahid is currently working on her MS in Human Resources. She has taken her United States Medical Licensing Exams and is ECFMG Certified. She is also a <a href="http://www.oumedicine.com/pediatrics/department-sections/developmental-behavioral-pediatrics/child-study-center/programs-and-clinical-services/lend">LEND</a> fellow.</p><p>She works on multiple research studies for OUHSC’s Sooner SUCCESS and Section of Developmental and Behavioral Pediatrics.  She is experienced in study design, development of research instruments, collection, management and analysis of data, interpretation of results, and preparation of reports. She is also gaining familiarity with qualitative methodology and network analysis.
+                                                        <p><strong>Maleeha Shahid</strong> is a Research Biostatistician at OUHSC. She received her MPH from OUHSC College of Public Health and her MB, BS (Bachelor of Medicine and Bachelor of Surgery) from Sindh Medical College – University of Karachi in Karachi, Pakistan. Ms. Shahid is currently working on her MS in Human Resources. She has taken her United States Medical Licensing Exams and is ECFMG Certified. She is also a <a href="http://www.oumedicine.com/pediatrics/department-sections/developmental-behavioral-pediatrics/child-study-center/programs-and-clinical-services/lend">LEND</a> fellow.</p><p>She works on multiple research studies for OUHSC’s <a href="https://soonersuccess.ouhsc.edu/">Sooner SUCCESS</a> and Section of Developmental and Behavioral Pediatrics.  She is experienced in study design, development of research instruments, collection, management and analysis of data, interpretation of results, and preparation of reports. She is also gaining familiarity with qualitative methodology and network analysis.
 
  </p>
                         </div>
@@ -798,7 +798,7 @@ are welcomed! If you would like to collaborate with us, please contact our <a hr
 </tr>
 <tr>
 <td><a href="https://github.com/OuhscBbmc/DeSheaToothakerIntroStats"><em>Introductory Statistics for the Health Sciences</em></a></td>
-<td>Graphs for the book by Lise DeShea and Larry E. Toothaker</td>
+<td>Graphs for the book by <a href="https://www.linkedin.com/pub/lise-a-deshea/77/6a0/821">Lise DeShea</a> and Larry E. Toothaker</td>
 <td>2015</td>
 </tr>
 <tr>
@@ -842,8 +842,8 @@ are welcomed! If you would like to collaborate with us, please contact our <a hr
                     <div class="mask">
                         <h2>Clinical Data Warehouse</h2>
                         <p>BBMC is partnering with OU College of Medicine, Oklahoma Shared Clinical and Translational Resources (<a href="http://osctr.ouhsc.edu/">OSCTR</a>),
-					OU Physicians, and the Health Care Authority/Meditech on the creation of a clinical data warehouse (CDW).
-					The development of CDW aims to connect electronic medical records (EMRs) to research and QI/QA communities. This
+					OU Physicians, and the Health Care Authority/Meditech on the creation of a clinical data warehouse (<a href="clinical data warehouse">CDW</a>).
+					The development of CDW aims to connect electronic medical records (<a href="http://healthit.ahrq.gov/key-topics/electronic-medical-record-systems">EMR</a>s) to research and QI/QA communities. This
 					will improve OUHSC's ability to compete for grants and care for patients. It will also allow facilitation
 					of meaningful local surveillance programs. CDW will also help avoid undesireable work-arounds which create risk for
 					duplicate data entry, poorer data quality, and poorly managed mini-databases.</p>
