A few more links; Making degrees more consistent.

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -313,7 +313,7 @@
  <br>
  <p>The BBMC mission is to support and enhance study design, data capture, and analytics for Pediatrics research.</p><h3>Who We Are:</h3>
                     <p>BBMC is a  <strong>collaboration</strong> with <a href="http://www.oumedicine.com/collegeofmedicine">College of Medicine</a> - <a href="http://www.oumedicine.com/pediatrics">Department of Pediatrics</a>, <a href="http://coph.ouhsc.edu/departments/bse/">Department of Biostatistics and Epidemiology</a>, and <a href="http://coph.ouhsc.edu/">College of Public Health</a>. Our team is comprised of <strong>biostatisticians</strong> and <strong>experienced researchers</strong>. The Core offers a variety of support services for projects at any stage of development.</p>
-					<br><p>  In addition to the consultation services our team provides, many members of the team continue to lead their own research studies within their own departments, including new method developments and applied research on Adverse Childhood Experiences (<a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>). You can read about some of those studies <a href="#research">here</a>. BBMC also provides general and advanced research <strong>training opportunities </strong>for researchers at all levels of experience. For more information about these research programs, collaborative opportunities, or training, please contact our BBMC Director, <a href="mailto:david-bard@ouhsc.edu">David Bard, PhD</a>.  </p>
+					<br><p>  In addition to the consultation services our team provides, many members of the team continue to lead their own research studies within their own departments, including new method developments and applied research on Adverse Childhood Experiences (<a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>). You can read about some of those studies <a href="#research">here</a>. BBMC also provides general and advanced research <strong>training opportunities </strong>for researchers at all levels of experience. For more information about these research programs, collaborative opportunities, or training, please contact our BBMC Director, <a href="mailto:david-bard@ouhsc.edu">David Bard</a>.  </p>
                 </div></div>
 
 
@@ -330,7 +330,7 @@
 	<div class="container content-lg">
             <div class="title-v1">
                 <h2>BBMC Expertise</h2>
-                <p>BBMC has faculty biostatisticians experienced in big and small data analytics, data mining, causal modeling, clinical trials, and all aspects of quantitative research design and development. Our staff have strong expertise in graphical reports, API data extraction experience, web development, and literate programming (e.g. Markdown, LaTeX).</p><p> We also have extensive knowledge of <a href="#redcap">REDCap</a>. and have members or two national committees on hand. We provide oversight for REDCap and are the lead developers of the <a href="https://github.com/OuhscBbmc/REDCapR">REDCapR</a> package for R statistical analysis software.</p>
+                <p>BBMC has faculty biostatisticians experienced in big and small data analytics, data mining, causal modeling, clinical trials, and all aspects of quantitative research design and development. Our staff have strong expertise in graphical reports, API data extraction experience, web development, and literate programming (e.g. Markdown, LaTeX).</p><p> We also have extensive knowledge of <a href="#redcap">REDCap</a>. and have members or two national committees on hand. We provide oversight for REDCap on campus, and are the lead developers of the <a href="https://github.com/OuhscBbmc/REDCapR">REDCapR</a> package for <a href="https://www.r-project.org/">R</a> statistical analysis software.</p>
 				<a href="https://bbmc.ouhsc.edu/redcap/surveys/?s=Zz5Qh4" class="btn-u btn-u-seabtn-brd-hover btn-u-light">Request Services</a>
 				<a href="#pricing" class="btn-u btn-u-seabtn-brd-hover btn-u-light">About pricing</a>
 
@@ -547,8 +547,8 @@ Dr. Bard's areas of expertise include quantitative statistical analysis and meth
 
                         </div>
                         <div class="col-md-8">
-                            <h2>William Beasley, PhD</h2><h4>Biostatistician</h4>
-                                                        <p><strong>William Beasley </strong>is an Assistant Professor at OU Pediatrics. He received his MA in psychology from Davidson College and his PhD in <a href="http://www.ou.edu/cas/psychology/Research/Quantitative.html">quantitative psychology</a> from University of Oklahoma. In addition to his role at BBMC, he provides statistical analysis and software development to research studies at OUHSC.
+                            <h2>Will Beasley, PhD</h2><h4>Biostatistician</h4>
+                                                        <p><strong>Will Beasley </strong>is an Assistant Professor at OU Pediatrics. He received his MA in psychology from Davidson College and his PhD in <a href="http://www.ou.edu/cas/psychology/Research/Quantitative.html">quantitative psychology</a> from University of Oklahoma. In addition to his role at BBMC, he provides statistical analysis and software development to research studies at OUHSC.
 <p>
 Dr. Beasley's areas of expertise and interest include Bayesian and Frequentist statistics, bioinformatics, simulation methods, and exploratory and graphical analysis, and reproducible research. He also has a wealth of software programming experience including SQL Server, C#, and R. </p>
 
@@ -661,7 +661,7 @@ Dr. Aston's areas of expertise and interest include experimental design, data an
 
                         </div>
                         <div class="col-md-8">
-                            <h2>Donna Wells, M.Ed.</h2><h4>Database Manager</h4>
+                            <h2>Donna Wells, MEd</h2><h4>Database Manager</h4>
                                                         <p><strong>Donna Wells</strong> designs, develops and maintains databases for BBMC and the Section of Developmental and Behavioral Pediatrics including SQL, Access, Nova Research QDS, and REDCap databases. Her focus is on development of databases for data collection for a variety of research projects related to prevention of child abuse and neglect, educational collaboratives, and treatment of children who have experienced trauma and maltreatment.  </p>
                         </div>
                                       </div>
@@ -697,7 +697,7 @@ Dr. Aston's areas of expertise and interest include experimental design, data an
 
                         </div>
                         <div class="col-md-8">
-                         <h2>Ram Poudel, M.P.H.</h2><h4>Affiliate Research Coordinator</h4>
+                         <h2>Ram Poudel, MPH</h2><h4>Affiliate Research Coordinator</h4>
                                                         <p><strong>Ram Poudel</strong> is a Research Coordinator at Department of Pediatrics at University of Oklahoma Health Sciences Center. Ram has a Master of Public Health in epidemiology and SAS and OSU Data Mining Certificate. Ram is a Certified SAS professional with three SAS Certifications: Certified Predictive Modeler, Certified SAS Base Programmer and Certified Business Analyst. He is also certified in Public Health (CPH) by The National Board of Public Health Examiners.  </p>
                         </div>
                     </div>
