--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -295,7 +295,7 @@
             <div class="col-md-4 col-sm-6">
               <div class="service-block service-block-default">
                 <span class="glyphicons pencil">
-                  <h2 class="heading-sm">Editing & Publications</h2>
+                  <h2 class="heading-sm">Editing &amp; Publications</h2>
                 </span>
                 <ul class="list-unstyled">
                   <li>Manuscript editing</li>
@@ -307,7 +307,7 @@
             <div class="col-md-4 col-sm-6">
               <div class="service-block service-block-default">
                 <span class="glyphicons fishes">
-                  <h2 class="heading-sm">Mentoring & Teaching</h2>
+                  <h2 class="heading-sm">Mentoring &amp; Teaching</h2>
                 </span>
                 <ul class="list-unstyled">
                   <li>Graduate committee memberships</li>
@@ -515,10 +515,10 @@
                           courses in applied linear statistical models, nonparametric statistics, and longitudinal data analysis. His research interests include longitudinal data analysis and approaches to hierarchical and correlated data. He is part
                           of a team at the OUHSC that develops workshops in evidence-based health care. He provides research design and statistical support to a variety of projects in public health and clinical medicine, many of which employ statistical
                           models to evaluate associations between outcomes and a variety of fixed, random, and repeated effects. </p>
-                        <p>Examples of Dr. Thompson's collaborations at OUHSC include statistical methods for cluster-randomized trials (Thompson, Fernald, & Mold, 2012); cluster-adjusted measures of sensitivity and specificity in a patient questionnaire
-                          of medicine and supplement use (Hanigan, Dela Cruz et al. 2011); generalized linear mixed models to analyze correlated ordinal ratings made by air quality inspectors (Johnson, Thompson, Clinkenbeard & Redus, 2008); GEE and mixed
-                          models to explore longitudinal outcomes in a surgical cohort (Elkins, Thompson, Lane, Elkins & Payton 2008); and cluster-adjusted Bland-Altman techniques applied to correlated EEG measures in patients undergoing anesthesia (Ozcan,
-                          Thompson, Cure, Hine & Roberts, 2009). </p>
+                        <p>Examples of Dr. Thompson's collaborations at OUHSC include statistical methods for cluster-randomized trials (Thompson, Fernald, &amp; Mold, 2012); cluster-adjusted measures of sensitivity and specificity in a patient questionnaire
+                          of medicine and supplement use (Hanigan, Dela Cruz et al. 2011); generalized linear mixed models to analyze correlated ordinal ratings made by air quality inspectors (Johnson, Thompson, Clinkenbeard &amp; Redus, 2008); GEE and mixed
+                          models to explore longitudinal outcomes in a surgical cohort (Elkins, Thompson, Lane, Elkins &amp; Payton 2008); and cluster-adjusted Bland-Altman techniques applied to correlated EEG measures in patients undergoing anesthesia (Ozcan,
+                          Thompson, Cure, Hine &amp; Roberts, 2009). </p>
                       </div>
                     </div>
                   </div>
