--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -217,8 +217,7 @@
             <strong>experienced researchers</strong>. The Core offers a variety of support services for projects at any stage of development.</p>
           <br>
           <p> In addition to the consultation services our team provides, many members of the team continue to lead their own research studies within their own departments, including new method developments and applied research on Adverse Childhood Experiences
-            (
-            <a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>). You can read about some of those studies <a href="#research">here</a>. BBMC also provides general and advanced research
+            (<a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>). You can read about some of those studies <a href="#research">here</a>. BBMC also provides general and advanced research
             <strong>training opportunities </strong>for researchers at all levels of experience. For more information about these research programs, collaborative opportunities, or training, please contact our BBMC Director, <a href="mailto:david-bard@ouhsc.edu">David Bard</a>.
           </p>
 
@@ -516,9 +515,9 @@
                           of a team at the OUHSC that develops workshops in evidence-based health care. He provides research design and statistical support to a variety of projects in public health and clinical medicine, many of which employ statistical
                           models to evaluate associations between outcomes and a variety of fixed, random, and repeated effects. </p>
                         <p>Examples of Dr. Thompson's collaborations at OUHSC include statistical methods for cluster-randomized trials (Thompson, Fernald, &amp; Mold, 2012); cluster-adjusted measures of sensitivity and specificity in a patient questionnaire
-                          of medicine and supplement use (Hanigan, Dela Cruz et al. 2011); generalized linear mixed models to analyze correlated ordinal ratings made by air quality inspectors (Johnson, Thompson, Clinkenbeard &amp; Redus, 2008); GEE and mixed
-                          models to explore longitudinal outcomes in a surgical cohort (Elkins, Thompson, Lane, Elkins &amp; Payton 2008); and cluster-adjusted Bland-Altman techniques applied to correlated EEG measures in patients undergoing anesthesia (Ozcan,
-                          Thompson, Cure, Hine &amp; Roberts, 2009). </p>
+                          of medicine and supplement use (Hanigan, Dela Cruz et al. 2011); generalized linear mixed models to analyze correlated ordinal ratings made by air quality inspectors (Johnson, Thompson, Clinkenbeard &amp; Redus, 2008); GEE and
+                          mixed models to explore longitudinal outcomes in a surgical cohort (Elkins, Thompson, Lane, Elkins &amp; Payton 2008); and cluster-adjusted Bland-Altman techniques applied to correlated EEG measures in patients undergoing anesthesia
+                          (Ozcan, Thompson, Cure, Hine &amp; Roberts, 2009). </p>
                       </div>
                     </div>
                   </div>
@@ -741,8 +740,7 @@
             <h2 class="title-v2 title-center">BBMC Portfolio</h2>
             <p class="space-lg-hor">
               <p>Read about some of the initiatives and projects BBMC members are working on. In addition to BBMC duties, BBMC investigators engage in parallel pursuit of their own programs of research. Much of our research focuses on Adverse Childhood Experiences
-                (
-                <a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>) and possible mental and physical health sequelae. New collaborators are welcomed! If you would like to collaborate with us, please contact our <a href="mailto:david-bard@ouhsc.edu">BBMC Director David Bard, PhD</a></p>
+                (<a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>) and possible mental and physical health sequelae. New collaborators are welcomed! If you would like to collaborate with us, please contact our <a href="mailto:david-bard@ouhsc.edu">BBMC Director David Bard</a></p>
           </div>
           <p><a href="http://reproducibleresearch.net/ ">Reproducible research</a> is a mentality and technique that makes an investigation transparent for outsiders to inspect and potentially conduct on their own. Here are some code &amp; report repositories
             of studies conducted by BBMC members. Many more are in the pipeline, to be released in 2015 &amp; 2016.</p>
@@ -854,10 +852,9 @@
               <div class="mask">
                 <h3>parentPRO Pilot Project</h3>
                 <p>OUHSC Department of Pediatrics are conducting the external evaluation of the <a href="http://parentpro.org/">parentPRO</a> Pilot. parentPRO Pilot is a new method of service delivery Oklahoma State Department of Health is rolling out for
-                  a more streamlined and customized version of EBHV. parentPRO Pilot is using the Parents As Teachers (
-                  <a href="http://www.parentsasteachers.org/">PAT</a>) model with the new additions of case managers, community connectors, and tailored levels of services for the varied needs of families. The research team will be evaluating outcomes
-                  for parentPRO Pilot in comparison with services as usual and no services. Cost-effectiveness will also be evaluated as compared to services as usual, and the process implementation will be monitored using semi-structured one-on-one interviews
-                  with <a href="http://www.ok.gov/health/ ">OSDH</a> staff.</p>
+                  a more streamlined and customized version of EBHV. parentPRO Pilot is using the Parents As Teachers (<a href="http://www.parentsasteachers.org/">PAT</a>) model with the new additions of case managers, community connectors, and tailored
+                  levels of services for the varied needs of families. The research team will be evaluating outcomes for parentPRO Pilot in comparison with services as usual and no services. Cost-effectiveness will also be evaluated as compared to services
+                  as usual, and the process implementation will be monitored using semi-structured one-on-one interviews with <a href="http://www.ok.gov/health/ ">OSDH</a> staff.</p>
               </div>
             </div>
           </div>
@@ -1015,8 +1012,7 @@
                           <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=redcap_survey_basics02.flv&amp;title=Single+Survey+Project+%285+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Single Survey Project (5 min)</a></li>
                           <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=longitudinal_project02.flv&amp;title=Longitudinal+Data+Entry+Form+Project+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Longitudinal Data Entry Form Project (3 min)</a></li>
                           <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=longitudinal_project02.flv&amp;title=Longitudinal+Project+with+Scheduling+%283+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Longitudinal Project with Scheduling (3 min)</a></li>
-                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=operational_project02.flv&amp;title=Using+REDCap+for+Operational+Use+and+Non-clinical+Data+Collection+++%282+min%29&amp;text=&amp;referer=REDCAP_PUBLIC"
-                            target="_blank">Using REDCap for Operational Use and Non-clinical Data Collection (2 min)</a>
+                          <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=operational_project02.flv&amp;title=Using+REDCap+for+Operational+Use+and+Non-clinical+Data+Collection+++%282+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">Using REDCap for Operational Use and Non-clinical Data Collection (2 min)</a>
                         </ul>
                       </ul>
                     </ul>
