more mis/un-closed elements from merge

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -87,7 +87,6 @@
             <li class="page-scroll">
               <a href="#redcap">REDCap</a>
             </li>
-            </li>
           </ul>
         </div>
       </div>
@@ -189,10 +188,10 @@
 
             </div>
           </li>
+        </ul>
 
-
-          <div class="tp-bannertimer tp-bottom"></div>
-          <div class="tp-dottedoverlay twoxtwo"></div>
+        <div class="tp-bannertimer tp-bottom"></div>
+        <div class="tp-dottedoverlay twoxtwo"></div>
       </div>
     </div>
   </section>
@@ -221,7 +220,7 @@
             <a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>). You can read about some of those studies <a href="#research">here</a>. BBMC also provides general and advanced research
             <strong>training opportunities </strong>for researchers at all levels of experience. For more information about these research programs, collaborative opportunities, or training, please contact our BBMC Director, <a href="mailto:david-bard@ouhsc.edu">David Bard</a>.
           </p>
-
+        </section>
       </div>
     </div>
   </div>
@@ -348,7 +347,6 @@
                 <li>
                   <span class="icon-compass"></span>Brief consult on design, aims, and analysis
                 </li>
-                <br>
               </ul>
               <a href="https://bbmc.ouhsc.edu/redcap/surveys/?s=Zz5Qh4" class="btn-u btn-brd btn-u">Request Support</a>
             </div>
@@ -391,7 +389,6 @@
                   <span class="icon-check"></span>All Tier 2 services</li>
                 <li>
                   <span class="icon-eyeglasses"></span>Biostatistics faculty support for design, aims, and analytics for the life of the project</li>
-                <br>
               </ul>
               <a href="https://bbmc.ouhsc.edu/redcap/surveys/?s=Zz5Qh4" class="btn-u btn-brd btn-u">Request Support</a>
             </div>
@@ -733,6 +730,9 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="research">
         <!--=== News Block ===-->
@@ -884,14 +884,7 @@
           </div>
         </div>
         <!--=== End News Block ===-->
-
-
-        </div>
-        </div>
-
         <!--/container-->
-
-        </div>
 
         <!-- Tab v1 -->
         <div class="team-v1 bg-grey content-lg">
@@ -965,12 +958,11 @@
                         <li>Collect all the data necessary for testing study hypothesis (hypotheses)</li>
                         <li>Collect only minimally-necessary set of PHI, in addition to those required by study design or operational requirements, to positively identify study subjects during data entry phase.</li>
                         <li>In the case of data regarding patient or subjects of OUHSC and her affiliates, all users must comply with HIPAA Privacy Policies and Information Security for Protected Health Information (PHI) and Education Records covered under
-                          the Family Educational Rights and Privacy Act (FERPA)</p>
-                    </li>
-                    <ul class="active">
-                      <li><a href="http://www.ouhsc.edu/hipaa">HIPAA</a></li>
-                      <li><a href="http://it.ouhsc.edu/policies">IT Policies</a></li>
-                    </ul>
+                          the Family Educational Rights and Privacy Act (FERPA)</li>
+                        <ul class="active">
+                          <li><a href="http://www.ouhsc.edu/hipaa">HIPAA</a></li>
+                          <li><a href="http://it.ouhsc.edu/policies">IT Policies</a></li>
+                        </ul>
                     </ul>
                     <h4>Policy</h4>
                     <p>Any authenticated user has a right to access REDCap, review public databases (e.g., demo databases) and create a new database or modify a database to which a corresponding authorization is granted (e.g., his/her own). Currently, the
@@ -978,8 +970,8 @@
                       <ul class="list-unstyled">
                         <li>The University of Oklahoma College of Medicine provides funding for two instances of REDCap. The first is a Development Box. The Development Box is used for testing REDCap projects and REDCap training. The second REDCap instance
                           the College of Medicine supports is an Enterprise Box which is used for general development and production.</li>
+                      </ul>
                   </div>
-
                   <div class="tab-pane fade in" id="training">
                     <h4>Basic Training Resources</h4>
                     <p>For those that are new to REDCap, there are many resources available to introduce you to REDCap and get you started. Among these training resources:
@@ -1176,9 +1168,9 @@
                   <!-- End Tab v1 -->
                   <!--/acc-v1-->
                 </div>
-
               </div>
             </div>
+          </section>
         </div>
         <!-- End Tab v1 -->
         <!-- End Services Section -->
