closing three orphaned sections

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -320,6 +320,7 @@
         </div>
       </div>
     </div>
+  </section>
 
     <!-- Pricing Table v6-->
     <section id="pricing">
@@ -395,6 +396,7 @@
           </div>
         </div>
       </div>
+    </section>
       <!-- End Pricing Table -->
 
       <div class="parallax-quote parallaxBg">
@@ -848,7 +850,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-xs-6">
             <div class="view view-tenth">
               <img class="img-responsive" src="assets/img/portfolio/parentpro.png" alt=" " />
@@ -883,9 +884,8 @@
             </div>
           </div>
         </div>
+      </section>
         <!--=== End News Block ===-->
-        <!--/container-->
-
         <!-- Tab v1 -->
         <div class="team-v1 bg-grey content-lg">
           <section id="redcap">
