link to REDCap supporters

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -936,10 +936,18 @@
                   <div class="col-md-4">
                     <div align=center>
                       <h4>REDCap is supported by:</h4>
-                      <img alt=" " class="img-responsive img-tab-space" src="assets/img/logos/BBMCSquare.png" style="height:180px">
-                      <img alt=" " class="img-responsive img-tab-space" src="assets/img/logos/com_logo.png">
-                      <img alt=" " class="img-responsive img-tab-space" src="assets/img/logos/OSCTR_Logo.gif" style="height:100px">
-                      <img alt=" " class="img-responsive img-tab-space" src="assets/img/logos/CTSI_Logo.gif" style="height:100px">
+                      <a href="http://www.ouhsc.edu/bbmc/" target="_blank">
+                        <img alt="BBMC" class="img-responsive img-tab-space" src="assets/img/logos/BBMCSquare.png" style="height:180px">
+                      </a>
+                      <a href="http://www.oumedicine.com/collegeofmedicine" target="_blank">
+                        <img alt="OUHSC College of Medicine" class="img-responsive img-tab-space" src="assets/img/logos/com_logo.png">
+                      </a>
+                      <a href="http://osctr.ouhsc.edu/" target="_blank">
+                        <img alt="OSCTR" class="img-responsive img-tab-space" src="assets/img/logos/OSCTR_Logo.gif" style="height:100px">
+                      </a>
+                      <a href="http://octsi.ouhsc.edu/" target="_blank">
+                        <img alt="CTSI" class="img-responsive img-tab-space" src="assets/img/logos/CTSI_Logo.gif" style="height:100px">
+                      </a>
                     </div>
                   </div>
                   <div class="col-md-8">
@@ -951,7 +959,7 @@
                       data validation.</p>
                     
                     <p>The design, use, and maintenance of REDCap are managed by the Biomedical and Behavioral Methodology Core (<a href="http://ouhsc.edu/bbmc/">BBMC</a>). The BBMC supports and enhances study design, data capture, and analytics for
-                      Pediatrics research. .</p>
+                      Pediatrics research.</p>
                     <p>REDCap has a flexible and fine-grained authorization matrix, allowing different members of the study team to have different levels of access (none, read-only or edit) to data entry forms, and access to database management and data
                       export tools. There are provisions to restrict access to data export to allow export of de-identified data only. Advanced features of the system include branching logic for dynamic data entry form generation, file uploading,
                       data importing, and embedded calculated database fields. </p>
@@ -1023,7 +1031,7 @@
                       <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=form_editor_upload_dd02.flv&amp;title=The+Online+Designer+and+Data+Dictionary+Upload+%284+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Online Designer and Data Dictionary Upload (4 min)</a></li>
                       <li><a href="https://redcap.vanderbilt.edu/consortium/videoplayer.php?video=online_designer01.flv&amp;title=The+Online+Designer+-+in+depth+%285+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Online Designer - in depth (5 min)</a></li>
                       <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=calendar_and_cal_data_entry01.flv&amp;title=The+Project+Calendar+%285+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Project Calendar (5 min)</a></li>
-                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=define_events01.flv&amp;title=The+%22Define+My+Events%22+Page+%284+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The "Define My Events " Page (4 min)</a></li>
+                      <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=define_events01.flv&amp;title=The+%22Define+My+Events%22+Page+%284+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The "Define My Events" Page (4 min)</a></li>
                       <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=scheduling01.flv&amp;title=The+Scheduling+Module+%286+min%29&amp;text=&amp;referer=REDCAP_PUBLIC" target="_blank">The Scheduling Module (6 min)</a></li>
                       <li><a href="http://redcap.vanderbilt.edu/consortium/videoplayer.php?video=data_access_groups01.flv&amp;title=Data+Access+Groups+%283+min%29&amp;text=Utilized+mostly+for+multi-site+projects%2C+Data+Access+Groups+are+a+good+way+of+creating+user+groups%0A%09%09%09%09%09%09%09%09%09where+different+groups+cannot+view+records+that+belong+to+other+groups.&amp;referer=REDCAP_PUBLIC" target="_blank">Data Access Groups (3 min)</a></li>
                     </ul>
